--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -2,6 +2,9 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
+{% block html_declare %}
+<html lang="en">
+{% endblock %}
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Niraj{% endblock %}</title>
@@ -43,17 +46,28 @@
 
             <ul class="nav navbar-nav navbar-right">
                   {% if user and not user.is_anonymous %}
-                  <li>
-                      <a>Hello {{ user.get_full_name|default:user.username }}!</a>
-                  </li>
-                  <li>
-                       <a href="{% url 'auth:logout' %}?next={{ request.path }}">Logout</a>
-                  </li>
+                    <li class = "dropdown">
+
+                          <a class = "dropdown-toggle" data-toggle = "dropdown" href = "#">
+                             <img src="{{ request.user.profile.profile_image_url }}"/> &nbsp;
+                          </a>
+
+                          <ul class = "dropdown-menu">
+                             <li><a>Hello {{ user.get_full_name|default:user.username }}!</a></li>
+
+                             <li class = "divider"></li>
+                             <li><a href='/accounts/logout'  name='csrfmiddlewaretoken' value='NEonJCMHfluYaxWBuXhsU48zFr63Tbswfiz94lngPfx44NpAiVuAwMRaUpxQshvI'>Logout</a></li>
+                          </ul>
+
+                       </li>
                   {% endif %}
             </ul>
 
+
          </div>
     </nav>
+
+
 
 
     <div class="col-xs-12">
