add right click disable 19oct

--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -1,5 +1,3 @@
-{% load staticfiles %}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
 {% block html_declare %}
@@ -90,7 +88,7 @@
 
 
 
-
+<script src="{% static 'userpanal/js/DisableRightClick.js' %}"></script>
 </body>
 
 <!--
