--- a/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStations.html
+++ b/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStations.html
@@ -21,13 +21,13 @@
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/humanity/jquery-ui.css">
 <script type="text/javascript" src="http://railwayapi.com/autocomplete.js"></script>
 
-<style scoped>
+<style>
   .ui-autocomplete {
     max-height: 300px;
     overflow-y: auto;
     /* prevent horizontal scrollbar */
     overflow-x: hidden;
-	width: 500px;
+	width: 300px;
 	cursor: pointer;
 
 	font-weight: bolder;
