name allignment 19oct 8.17PM

--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
-{% block html_declare %}
-<html lang="en">
-{% endblock %}
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Niraj{% endblock %}</title>
+    <title>{% block title %}Train Status Online{% endblock %}</title>
     {% load staticfiles %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="http://www.tutorialspoint.com/bootstrap/css/bootstrap.min.css" rel="stylesheet">
