--- a/userpanal/templates/userpanal/pnr.html
+++ b/userpanal/templates/userpanal/pnr.html
@@ -13,9 +13,10 @@
 
     {% include 'userpanal/Detail.html' %}
     <div class="col-xs-9 col-md-9">
-            <div class="page-header">
-                <h2>PNR Status</h2>
+      		<div class="col-sm-10 form-group">
+                <p align="center"><font size="5">PNR Status</font></p>
             </div>
+
 
             <div class="container-fluid  img-responsive">
                 <div class="row">
