--- a/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
+++ b/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
@@ -39,10 +39,10 @@
 
 
     <div class="col-xs-9 col-md-9">
-            <div class="page-header">
-                <h2>Live Train Status</h2>
-            </div>
 
+      		<div class="col-sm-10 form-group">
+                <p align="center"><font size="5">Live Train Status</font></p>
+            </div>
             <div class="container-fluid  img-responsive">
                 <div class="row">
                     <div class="col-xs-9 col-md-9">
