--- a/Train_Arrivals_At_Station/templates/Train_Arrivals_At_Station/trainArrivalsAtStation.html
+++ b/Train_Arrivals_At_Station/templates/Train_Arrivals_At_Station/trainArrivalsAtStation.html
@@ -38,10 +38,9 @@ table#myTable,#myTable2 {
     {% include 'userpanal/Detail.html' %}
 
     <div class="col-xs-9 col-md-9">
-            <div class="page-header">
-                <h3>Train Arrivals At Station</h3>
+      		<div class="col-sm-10 form-group">
+                <p align="center"><font size="5">Train Arrivals At Station</font></p>
             </div>
-
             <div class="container-fluid  img-responsive">
                 <div class="row">
                     <div class="col-xs-9 col-md-9">
