--- a/Train_Route/templates/Train_Route/trainRoute.html
+++ b/Train_Route/templates/Train_Route/trainRoute.html
@@ -22,11 +22,8 @@
     {% include 'userpanal/Detail.html' %}
 
     <div class="col-xs-9">
-        <div class="container-fluid">
-            <div class="page-header">
-                <h2>Train Route</h2>
-            </div>
-
+        <div class="col-sm-10 form-group">
+            <p align="center"><font size="5">Train Route</font></p>
         </div>
     </div>
 
