--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -5,7 +5,9 @@
     <title>{% block title %}Train Status Online{% endblock %}</title>
     {% load staticfiles %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="http://www.tutorialspoint.com/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="http://www.tutorialspoint.com/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" type="text/css" href="{% static 'userpanal/bootstrap.min.css' %}" />
+
     <link href="http://fonts.googleapis.com/css?family=Satisfy" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
