--- a/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStations.html
+++ b/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStations.html
@@ -3,40 +3,9 @@
 {% load staticfiles %}
 {% block body %}
 
-
-<!--formden.js communicates with FormDen server to validate fields and submit via AJAX -->
-<!--
-<script type="text/javascript" src="https://formden.com/static/cdn/formden.js"></script>
--->
-<!-- Special version of Bootstrap that is isolated to content wrapped in .bootstrap-iso -->
-<!--
-<link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
--->
-
-<!--Font Awesome (added because you use icons in your prepend/append) to show calender icon
-<link rel="stylesheet" href="https://formden.com/static/cdn/font-awesome/4.4.0/css/font-awesome.min.css" />-->
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"> </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://railwayapi.com/jquery-ui-1.8.2.custom.min.js"></script>
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/humanity/jquery-ui.css">
-<script type="text/javascript" src="http://railwayapi.com/autocomplete.js"></script>
+{% include 'userpanal/station_file_link.html' %}
 
 <style>
-  .ui-autocomplete {
-    max-height: 300px;
-    overflow-y: auto;
-    /* prevent horizontal scrollbar */
-    overflow-x: hidden;
-	width: 300px;
-	cursor: pointer;
-
-	font-weight: bolder;
-	color: gray;
-	list-style-position: inside;
-	font-size: 1.2em
-
-  }
-
 table#myTable,#myTable2 {
     align:"left";
     border: 1px solid black;
